fix drawer cut off

--- a/app/assets/stylesheets/songs_manifest.css.scss
+++ b/app/assets/stylesheets/songs_manifest.css.scss
@@ -52,6 +52,7 @@
     top: 50px;
     right: 0;
     padding: 20px;
+    padding-bottom: 70px;
     background-color: white;
     height: 100%;
     width:  50vw;
